force-app/main/default/objects/BGR_Product_document__c/BGR_Product_document__c.object-meta.xml
<CustomObject>
    <label>BGR Product document</label>
    <nameField>
        <label>BGR Product document</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BGR Product document</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>