force-app/main/default/objects/BGR_Product_document__c/fields/ConnectionCode__c.field-meta.xml
<CustomField>
    <fullName>ConnectionCode__c</fullName>
    <label>ConnectionCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>