force-app/main/default/objects/BGR_Product_document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>SZC__c</columns>
    <columns>ConnectionCode__c</columns>
    <columns>AssemblyDrawing__c</columns>
    <columns>FileName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>